reformated node and edge so that one no longer relies on id for indexing, makes the code more readable and faster to get node neighbors. also cleaned up the code a bit

--- a/src/styles.css
+++ b/src/styles.css
@@ -301,6 +301,11 @@ body {
 	color: red;
 }
 
+.edge{
+	stroke: currentColor;
+	stroke-width: 1.5;
+}
+
 /* Responsive Design */
 @media (max-width: 600px) {
 	button {
